<resources>
    <string name="app_name">Go</string>

    <!-- 對局資訊 -->
    <string name="info_km">貼目：</string>
    <string name="info_game_time">比賽時間：</string>
    <string name="info_pw">白棋：</string>
    <string name="info_pb">黑棋：</string>
    <string name="info_wr">白棋棋力：</string>
    <string name="info_br">黑棋棋力：</string>
    <string name="info_re">勝負：</string>

    <!-- MainActivity-->
    <string name="pk">對弈</string>
    <string name="load_book">載入棋譜</string>
    <string name="new_book">新增棋譜</string>
    
    <!-- PKFragment -->
    <string name="surrender">認輸</string>
    <string name="sure_surrender">確定認輸？</string>
    <string name="regret">悔棋</string>
    <string name="sure_regret">是否讓對手悔棋？</string>
    <string name="pass">虛手</string>
    <string name="not_ur_turn">不是你的回合</string>
    <string name="get_dead_chess">點選死子</string>
    <string name="pk_for_place">%1$s%2$d目</string>
    <string name="win_for_place">%1$s勝：%2$.1f目</string>
    <string name="win_for_surrend">%s中盤勝</string>
    <string name="review_game">覆盤</string>
    <string name="save_game">儲存棋譜</string>
    <string name="select_path">請選擇存放位置</string>
    <string name="comity">讓子：</string>

    <!-- LoadBookFragment -->
    <string name="show_number">手數</string>
    <string name="try_it">試下</string>
    <string name="finish_try">請先結束試下</string>

    <!-- SelectFileAdapter -->
    <string name="file_name">檔案名稱</string>
    <string name="select_sgf">請選擇sgf檔</string>

    <!-- PKSettingDialog -->
    <string name="default_bp">黑方</string>
    <string name="default_wp">白方</string>

    <!-- NewBookFragment -->
    <string name="last">上一手</string>

</resources>
