<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/icon_board_back"
        android:clickable="true"
        android:orientation="vertical">

        <go.hao.tw.go.view.GoView
            android:id="@+id/goView"
            android:layout_width="wrap_content"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnLast"
                style="@style/NormalButton"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/last"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnPass"
                style="@style/NormalButton"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/pass"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSaveGame"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_try_back_selector"
                android:text="@string/save_game"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/item_save_file"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>