<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_board_back"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llSelectFile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/blue2"
            android:gravity="center"
            android:text="@string/select_sgf"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <go.hao.tw.go.view.GoView
        android:id="@+id/goView"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInit"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="|＜"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnLastFive"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="＜＜"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnLast"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="＜"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnNext"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="＞"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnNextFive"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="＞＞"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnEnd"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="＞|"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnShowNumber"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/show_number"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btnTry"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_try_back_selector"
            android:text="@string/try_it"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </ScrollView>
</LinearLayout>